# unishare

./: CONTRIBUTING.md  LICENSE  Readme.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  documentation_update.md  feature_request.md
.github/workflows/: build_validator.yml  codeql.yml  commit-message-check.yml  discord-pr-notify.yaml  nightly-build.yml  release.yml  rust-ci.yml  rust-coverage.yml  rust-lint.yml
src/: index.html  index.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/protocols/: wifi_direct.rs
unishare/: package-lock.json  package.json  vite.config.ts
unishare-frontend/: package-lock.json  package.json
unishare-frontend/src-tauri/: Cargo.toml
unishare-frontend/src-tauri/src/: device_discovery.rs  main.rs  webrtc_transfer.rs
unishare-frontend/src/app/: layout.tsx  page.tsx
unishare-frontend/src/components/: bluetooth.tsx  device-connector.tsx  file-transfer-protocols.tsx  file-uploader.tsx  settings.tsx  theme-provider.tsx  theme-toggle.tsx  transfer-history.tsx  webrtc.tsx  wifi-direct.tsx
unishare/src/: App.tsx
unishare/src-tauri/: Cargo.toml  tauri.conf.json
unishare/src-tauri/src/: main.rs  webrtc_transfer.rs
unishare/src-tauri/src/protocols/: bluetooth.rs  mobiledata.rs  mod.rs  protocol_manager.rs  webrtc.rs
unishare/src-tauri/tests/: bluetooth_test.rs  wifi_direct_test.rs
unishare_linux/: package-lock.json  package.json  test.txt  vite.config.ts
unishare_linux/src/: App.tsx
unishare_linux/src-tauri/: Cargo.toml  tauri.conf.json
(+6 files in other folders)
